exports[`Article action createArticle 1`] = `
Object {
  "articleId": Object {
    "articleMock": Array [
      Object {
        "_id": "59eb8261d2ddc040ead6c7fa",
        "author": "Bertram Wintheiser",
        "content": "Et iure enim saepe. Repellat reprehenderit sequi id. Eveniet sit ex. Rem et labore temporibus dicta architecto reprehenderit qui. Consequatur amet aspernatur porro. Quo consequatur nesciunt et quod id.",
        "excerpt": "Et iure enim saepe. Repellat reprehenderit sequi id. Eveniet sit ex. Rem et labore temporibus dicta ",
        "published": false,
        "tags": Array [
          "Avon portal Outdoors",
          "networks Berkshire Fish",
        ],
        "title": "Senior Communications Coordinator",
      },
    ],
  },
  "type": "DELETE_ARTICLE",
}
`;

exports[`Article action deleteArticle 1`] = `
Object {
  "articleId": Object {
    "articleId": "59eb8261d2ddc040ead6c7fa",
  },
  "type": "DELETE_ARTICLE",
}
`;

exports[`Article action fetch 1`] = `
Object {
  "type": "FETCH_ARTICLES",
}
`;

exports[`Article action filterArticle 1`] = `
Object {
  "articleId": Object {
    "articleId": "59eb8261d2ddc040ead6c7fa",
  },
  "type": "FILTER_ARTICLE",
}
`;

exports[`Article action updateArticle 1`] = `
Object {
  "articleId": Object {
    "articleMock": Array [
      Object {
        "_id": "59eb8261d2ddc040ead6c7fa",
        "author": "Bertram Wintheiser",
        "content": "Et iure enim saepe. Repellat reprehenderit sequi id. Eveniet sit ex. Rem et labore temporibus dicta architecto reprehenderit qui. Consequatur amet aspernatur porro. Quo consequatur nesciunt et quod id.",
        "excerpt": "Et iure enim saepe. Repellat reprehenderit sequi id. Eveniet sit ex. Rem et labore temporibus dicta ",
        "published": false,
        "tags": Array [
          "Avon portal Outdoors",
          "networks Berkshire Fish",
        ],
        "title": "Senior Communications Coordinator",
      },
    ],
  },
  "type": "DELETE_ARTICLE",
}
`;
